# z-image-burn

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  shell-amd.nix  shell-nvidia.nix
qwen3-convert/: Cargo.toml
qwen3-convert/src/: main.rs
scripts/: embed_prompt.py
z-image/: Cargo.toml
z-image-cli/: Cargo.toml
z-image-cli/src/: main.rs
z-image-convert/: Cargo.toml
z-image-convert/src/: main.rs
z-image/src/: compat.rs  lib.rs  load.rs  modules.rs  scheduler.rs  utils.rs
z-image/src/modules/: ae.rs  lora.rs  transformer.rs
z-image/src/modules/transformer/: attention.rs  feed_forward.rs  final_layer.rs  layer_norm.rs  lora_transformer.rs  rope.rs  timestep_embedder.rs  transformer_block.rs  utils.rs
