[workspace]
resolver = "2"
members = [
    "z-image",
    "z-image-cli",
    "z-image-convert",
]

[workspace.dependencies]
burn = { path = "../burn/crates/burn" }
burn-store = { path = "../burn/crates/burn-store" }
cfg-if = "1.0.4"
clap = "4.5.53"
qwen3-burn = { path = "../qwen3-burn" }
rootcause = "0.11.0"
thiserror = "2.0.17"
z-image = { path = "./z-image" }

[profile.dev.package."*"]
opt-level = 2
