[workspace]
resolver = "2"
members = [
    "z-image",
    "z-image-cli",
    "z-image-convert",
    "qwen3-convert",
]

[workspace.dependencies]
burn = { git = "https://github.com/tracel-ai/burn.git" }
burn-store = { git = "https://github.com/tracel-ai/burn.git" }
cfg-if = "1.0.4"
clap = "4.5.53"
qwen3-burn = { path = "../qwen3-burn" }
rootcause = "0.11.0"
thiserror = "2.0.17"
z-image = { path = "./z-image" }

[profile.dev.package."*"]
opt-level = 2
