[package]
name = "qwen3-convert"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { workspace = true, features = ["ndarray", "store"] }
burn-store = { workspace = true, features = ["burnpack", "safetensors"] }
clap = { workspace = true, features = ["derive"] }
qwen3-burn = { workspace = true }
